- add splash screen - add gallery screen - add detail screen with validation (formik + yup)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@navigation/*": ["navigation/*"],
       "@service/*": ["service/*"],
       "@styles/*": ["styles/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@hooks/*": ["hooks/*"],
+      "@types/*": ["types/*"],
     }
   }
 }
